exports[`CodePlugin() should accept a custom blockMarginBottom 1`] = `
Object {
  "*": Object {
    "boxSizing": "inherit",
  },
  "*:after": Object {
    "boxSizing": "inherit",
  },
  "*:before": Object {
    "boxSizing": "inherit",
  },
  "abbr": Object {
    "borderBottom": "1px dotted hsla(0,0%,0%,0.5)",
    "cursor": "help",
  },
  "abbr[title]": Object {
    "borderBottom": "1px dotted hsla(0,0%,0%,0.5)",
    "cursor": "help",
    "textDecoration": "none",
  },
  "acronym": Object {
    "borderBottom": "1px dotted hsla(0,0%,0%,0.5)",
    "cursor": "help",
  },
  "address": Object {
    "marginBottom": "1rem",
    "marginLeft": 0,
    "marginRight": 0,
    "marginTop": 0,
    "paddingBottom": 0,
    "paddingLeft": 0,
    "paddingRight": 0,
    "paddingTop": 0,
  },
  "b": Object {
    "fontWeight": "bold",
  },
  "blockquote": Object {
    "marginBottom": "1rem",
    "marginLeft": "1.5rem",
    "marginRight": "1.5rem",
    "marginTop": 0,
    "paddingBottom": 0,
    "paddingLeft": 0,
    "paddingRight": 0,
    "paddingTop": 0,
  },
  "body": Object {
    "color": "hsla(0,0%,0%,0.8)",
    "fontWeight": "normal",
    "wordWrap": "break-word",
  },
  "code": Object {
    "fontSize": "0.85rem",
    "lineHeight": "1.5rem",
  },
  "code:before,code:after,tt:before,tt:after": Object {
    "content": "\" \"",
    "letterSpacing": "-0.2em",
  },
  "dd": Object {
    "marginBottom": "1rem",
    "marginLeft": 0,
    "marginRight": 0,
    "marginTop": 0,
    "paddingBottom": 0,
    "paddingLeft": 0,
    "paddingRight": 0,
    "paddingTop": 0,
  },
  "dl": Object {
    "marginBottom": "1rem",
    "marginLeft": 0,
    "marginRight": 0,
    "marginTop": 0,
    "paddingBottom": 0,
    "paddingLeft": 0,
    "paddingRight": 0,
    "paddingTop": 0,
  },
  "dt": Object {
    "fontWeight": "bold",
  },
  "fieldset": Object {
    "marginBottom": "1rem",
    "marginLeft": 0,
    "marginRight": 0,
    "marginTop": 0,
    "paddingBottom": 0,
    "paddingLeft": 0,
    "paddingRight": 0,
    "paddingTop": 0,
  },
  "figure": Object {
    "marginBottom": "1rem",
    "marginLeft": 0,
    "marginRight": 0,
    "marginTop": 0,
    "paddingBottom": 0,
    "paddingLeft": 0,
    "paddingRight": 0,
    "paddingTop": 0,
  },
  "form": Object {
    "marginBottom": "1rem",
    "marginLeft": 0,
    "marginRight": 0,
    "marginTop": 0,
    "paddingBottom": 0,
    "paddingLeft": 0,
    "paddingRight": 0,
    "paddingTop": 0,
  },
  "h1": Object {
    "color": "hsla(0,0%,0%,0.8)",
    "fontFamily": "-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen,Ubuntu,Cantarell,Fira Sans,Droid Sans,Helvetica Neue,sans-serif",
    "fontSize": "2rem",
    "fontWeight": "bold",
    "lineHeight": "2.25rem",
    "marginBottom": "1rem",
    "marginLeft": 0,
    "marginRight": 0,
    "marginTop": 0,
    "paddingBottom": 0,
    "paddingLeft": 0,
    "paddingRight": 0,
    "paddingTop": 0,
    "textRendering": "optimizeLegibility",
  },
  "h2": Object {
    "color": "hsla(0,0%,0%,0.8)",
    "fontFamily": "-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen,Ubuntu,Cantarell,Fira Sans,Droid Sans,Helvetica Neue,sans-serif",
    "fontSize": "1.51572rem",
    "fontWeight": "bold",
    "lineHeight": "2.25rem",
    "marginBottom": "1rem",
    "marginLeft": 0,
    "marginRight": 0,
    "marginTop": 0,
    "paddingBottom": 0,
    "paddingLeft": 0,
    "paddingRight": 0,
    "paddingTop": 0,
    "textRendering": "optimizeLegibility",
  },
  "h3": Object {
    "color": "hsla(0,0%,0%,0.8)",
    "fontFamily": "-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen,Ubuntu,Cantarell,Fira Sans,Droid Sans,Helvetica Neue,sans-serif",
    "fontSize": "1.31951rem",
    "fontWeight": "bold",
    "lineHeight": "2.25rem",
    "marginBottom": "1rem",
    "marginLeft": 0,
    "marginRight": 0,
    "marginTop": 0,
    "paddingBottom": 0,
    "paddingLeft": 0,
    "paddingRight": 0,
    "paddingTop": 0,
    "textRendering": "optimizeLegibility",
  },
  "h4": Object {
    "color": "hsla(0,0%,0%,0.8)",
    "fontFamily": "-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen,Ubuntu,Cantarell,Fira Sans,Droid Sans,Helvetica Neue,sans-serif",
    "fontSize": "1rem",
    "fontWeight": "bold",
    "lineHeight": "1.5rem",
    "marginBottom": "1rem",
    "marginLeft": 0,
    "marginRight": 0,
    "marginTop": 0,
    "paddingBottom": 0,
    "paddingLeft": 0,
    "paddingRight": 0,
    "paddingTop": 0,
    "textRendering": "optimizeLegibility",
  },
  "h5": Object {
    "color": "hsla(0,0%,0%,0.8)",
    "fontFamily": "-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen,Ubuntu,Cantarell,Fira Sans,Droid Sans,Helvetica Neue,sans-serif",
    "fontSize": "0.87055rem",
    "fontWeight": "bold",
    "lineHeight": "1.5rem",
    "marginBottom": "1rem",
    "marginLeft": 0,
    "marginRight": 0,
    "marginTop": 0,
    "paddingBottom": 0,
    "paddingLeft": 0,
    "paddingRight": 0,
    "paddingTop": 0,
    "textRendering": "optimizeLegibility",
  },
  "h6": Object {
    "color": "hsla(0,0%,0%,0.8)",
    "fontFamily": "-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen,Ubuntu,Cantarell,Fira Sans,Droid Sans,Helvetica Neue,sans-serif",
    "fontSize": "0.81225rem",
    "fontWeight": "bold",
    "lineHeight": "1.5rem",
    "marginBottom": "1rem",
    "marginLeft": 0,
    "marginRight": 0,
    "marginTop": 0,
    "paddingBottom": 0,
    "paddingLeft": 0,
    "paddingRight": 0,
    "paddingTop": 0,
    "textRendering": "optimizeLegibility",
  },
  "hgroup": Object {
    "marginBottom": "1rem",
    "marginLeft": 0,
    "marginRight": 0,
    "marginTop": 0,
    "paddingBottom": 0,
    "paddingLeft": 0,
    "paddingRight": 0,
    "paddingTop": 0,
  },
  "hr": Object {
    "background": "hsla(0,0%,0%,0.2)",
    "border": "none",
    "height": "1px",
    "marginBottom": "calc(1rem - 1px)",
    "marginLeft": 0,
    "marginRight": 0,
    "marginTop": 0,
    "paddingBottom": 0,
    "paddingLeft": 0,
    "paddingRight": 0,
    "paddingTop": 0,
  },
  "html": Object {
    "boxSizing": "border-box",
    "font": "100%/1.5em georgia,serif",
    "overflowY": "scroll",
  },
  "iframe": Object {
    "marginBottom": "1rem",
    "marginLeft": 0,
    "marginRight": 0,
    "marginTop": 0,
    "paddingBottom": 0,
    "paddingLeft": 0,
    "paddingRight": 0,
    "paddingTop": 0,
  },
  "img": Object {
    "marginBottom": "1rem",
    "marginLeft": 0,
    "marginRight": 0,
    "marginTop": 0,
    "maxWidth": "100%",
    "paddingBottom": 0,
    "paddingLeft": 0,
    "paddingRight": 0,
    "paddingTop": 0,
  },
  "kbd": Object {
    "fontSize": "0.85rem",
    "lineHeight": "1.5rem",
  },
  "li": Object {
    "marginBottom": "calc(1rem / 2)",
  },
  "li > ol": Object {
    "marginBottom": "calc(1rem / 2)",
    "marginLeft": "1.5rem",
    "marginTop": "calc(1rem / 2)",
  },
  "li > ul": Object {
    "marginBottom": "calc(1rem / 2)",
    "marginLeft": "1.5rem",
    "marginTop": "calc(1rem / 2)",
  },
  "noscript": Object {
    "marginBottom": "1rem",
    "marginLeft": 0,
    "marginRight": 0,
    "marginTop": 0,
    "paddingBottom": 0,
    "paddingLeft": 0,
    "paddingRight": 0,
    "paddingTop": 0,
  },
  "ol": Object {
    "listStyleImage": "none",
    "listStylePosition": "outside",
    "marginBottom": "1rem",
    "marginLeft": "1.5rem",
    "marginRight": 0,
    "marginTop": 0,
    "paddingBottom": 0,
    "paddingLeft": 0,
    "paddingRight": 0,
    "paddingTop": 0,
  },
  "ol li": Object {
    "paddingLeft": 0,
  },
  "p": Object {
    "marginBottom": "1rem",
    "marginLeft": 0,
    "marginRight": 0,
    "marginTop": 0,
    "paddingBottom": 0,
    "paddingLeft": 0,
    "paddingRight": 0,
    "paddingTop": 0,
  },
  "pre": Object {
    "background": "hsla(0,0%,0%,0.04)",
    "borderRadius": "3px",
    "fontSize": "0.85rem",
    "lineHeight": 1.42,
    "marginBottom": "1rem",
    "marginLeft": 0,
    "marginRight": 0,
    "marginTop": 0,
    "overflow": "auto",
    "padding": "1rem",
    "paddingBottom": 0,
    "paddingLeft": 0,
    "paddingRight": 0,
    "paddingTop": 0,
  },
  "pre code": Object {
    "background": "none",
    "lineHeight": 1.42,
  },
  "pre code:before,pre code:after,pre tt:before,pre tt:after": Object {
    "content": "\"\"",
  },
  "samp": Object {
    "fontSize": "0.85rem",
    "lineHeight": "1.5rem",
  },
  "strong": Object {
    "fontWeight": "bold",
  },
  "table": Object {
    "borderCollapse": "collapse",
    "fontSize": "1rem",
    "lineHeight": "1.5rem",
    "marginBottom": "1rem",
    "marginLeft": 0,
    "marginRight": 0,
    "marginTop": 0,
    "paddingBottom": 0,
    "paddingLeft": 0,
    "paddingRight": 0,
    "paddingTop": 0,
    "width": "100%",
  },
  "td,th": Object {
    "borderBottom": "1px solid hsla(0,0%,0%,0.12)",
    "fontFeatureSettings": "tnum",
    "paddingBottom": "calc(0.75rem - 1px)",
    "paddingLeft": "1rem",
    "paddingRight": "1rem",
    "paddingTop": "0.75rem",
    "textAlign": "left",
  },
  "th": Object {
    "fontWeight": "bold",
  },
  "th:first-child,td:first-child": Object {
    "paddingLeft": 0,
  },
  "th:last-child,td:last-child": Object {
    "paddingRight": 0,
  },
  "thead": Object {
    "textAlign": "left",
  },
  "tt,code": Object {
    "backgroundColor": "hsla(0,0%,0%,0.04)",
    "borderRadius": "3px",
    "fontFamily": "Consolas,\"Roboto Mono\",\"Droid Sans Mono\",\"Liberation Mono\",Menlo,Courier,monospace",
    "padding": 0,
    "paddingBottom": "0.2em",
    "paddingTop": "0.2em",
  },
  "ul": Object {
    "listStyleImage": "none",
    "listStylePosition": "outside",
    "marginBottom": "1rem",
    "marginLeft": "1.5rem",
    "marginRight": 0,
    "marginTop": 0,
    "paddingBottom": 0,
    "paddingLeft": 0,
    "paddingRight": 0,
    "paddingTop": 0,
  },
  "ul li": Object {
    "paddingLeft": 0,
  },
}
`;

exports[`CodePlugin() should accept an empty blockMarginBottom 1`] = `
Object {
  "*": Object {
    "boxSizing": "inherit",
  },
  "*:after": Object {
    "boxSizing": "inherit",
  },
  "*:before": Object {
    "boxSizing": "inherit",
  },
  "abbr": Object {
    "borderBottom": "1px dotted hsla(0,0%,0%,0.5)",
    "cursor": "help",
  },
  "abbr[title]": Object {
    "borderBottom": "1px dotted hsla(0,0%,0%,0.5)",
    "cursor": "help",
    "textDecoration": "none",
  },
  "acronym": Object {
    "borderBottom": "1px dotted hsla(0,0%,0%,0.5)",
    "cursor": "help",
  },
  "address": Object {
    "marginBottom": "1.5rem",
    "marginLeft": 0,
    "marginRight": 0,
    "marginTop": 0,
    "paddingBottom": 0,
    "paddingLeft": 0,
    "paddingRight": 0,
    "paddingTop": 0,
  },
  "b": Object {
    "fontWeight": "bold",
  },
  "blockquote": Object {
    "marginBottom": "1.5rem",
    "marginLeft": "1.5rem",
    "marginRight": "1.5rem",
    "marginTop": 0,
    "paddingBottom": 0,
    "paddingLeft": 0,
    "paddingRight": 0,
    "paddingTop": 0,
  },
  "body": Object {
    "color": "hsla(0,0%,0%,0.8)",
    "fontWeight": "normal",
    "wordWrap": "break-word",
  },
  "code": Object {
    "fontSize": "0.85rem",
    "lineHeight": "1.5rem",
  },
  "code:before,code:after,tt:before,tt:after": Object {
    "content": "\" \"",
    "letterSpacing": "-0.2em",
  },
  "dd": Object {
    "marginBottom": "1.5rem",
    "marginLeft": 0,
    "marginRight": 0,
    "marginTop": 0,
    "paddingBottom": 0,
    "paddingLeft": 0,
    "paddingRight": 0,
    "paddingTop": 0,
  },
  "dl": Object {
    "marginBottom": "1.5rem",
    "marginLeft": 0,
    "marginRight": 0,
    "marginTop": 0,
    "paddingBottom": 0,
    "paddingLeft": 0,
    "paddingRight": 0,
    "paddingTop": 0,
  },
  "dt": Object {
    "fontWeight": "bold",
  },
  "fieldset": Object {
    "marginBottom": "1.5rem",
    "marginLeft": 0,
    "marginRight": 0,
    "marginTop": 0,
    "paddingBottom": 0,
    "paddingLeft": 0,
    "paddingRight": 0,
    "paddingTop": 0,
  },
  "figure": Object {
    "marginBottom": "1.5rem",
    "marginLeft": 0,
    "marginRight": 0,
    "marginTop": 0,
    "paddingBottom": 0,
    "paddingLeft": 0,
    "paddingRight": 0,
    "paddingTop": 0,
  },
  "form": Object {
    "marginBottom": "1.5rem",
    "marginLeft": 0,
    "marginRight": 0,
    "marginTop": 0,
    "paddingBottom": 0,
    "paddingLeft": 0,
    "paddingRight": 0,
    "paddingTop": 0,
  },
  "h1": Object {
    "color": "hsla(0,0%,0%,0.8)",
    "fontFamily": "-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen,Ubuntu,Cantarell,Fira Sans,Droid Sans,Helvetica Neue,sans-serif",
    "fontSize": "2rem",
    "fontWeight": "bold",
    "lineHeight": "2.25rem",
    "marginBottom": "1.5rem",
    "marginLeft": 0,
    "marginRight": 0,
    "marginTop": 0,
    "paddingBottom": 0,
    "paddingLeft": 0,
    "paddingRight": 0,
    "paddingTop": 0,
    "textRendering": "optimizeLegibility",
  },
  "h2": Object {
    "color": "hsla(0,0%,0%,0.8)",
    "fontFamily": "-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen,Ubuntu,Cantarell,Fira Sans,Droid Sans,Helvetica Neue,sans-serif",
    "fontSize": "1.51572rem",
    "fontWeight": "bold",
    "lineHeight": "2.25rem",
    "marginBottom": "1.5rem",
    "marginLeft": 0,
    "marginRight": 0,
    "marginTop": 0,
    "paddingBottom": 0,
    "paddingLeft": 0,
    "paddingRight": 0,
    "paddingTop": 0,
    "textRendering": "optimizeLegibility",
  },
  "h3": Object {
    "color": "hsla(0,0%,0%,0.8)",
    "fontFamily": "-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen,Ubuntu,Cantarell,Fira Sans,Droid Sans,Helvetica Neue,sans-serif",
    "fontSize": "1.31951rem",
    "fontWeight": "bold",
    "lineHeight": "2.25rem",
    "marginBottom": "1.5rem",
    "marginLeft": 0,
    "marginRight": 0,
    "marginTop": 0,
    "paddingBottom": 0,
    "paddingLeft": 0,
    "paddingRight": 0,
    "paddingTop": 0,
    "textRendering": "optimizeLegibility",
  },
  "h4": Object {
    "color": "hsla(0,0%,0%,0.8)",
    "fontFamily": "-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen,Ubuntu,Cantarell,Fira Sans,Droid Sans,Helvetica Neue,sans-serif",
    "fontSize": "1rem",
    "fontWeight": "bold",
    "lineHeight": "1.5rem",
    "marginBottom": "1.5rem",
    "marginLeft": 0,
    "marginRight": 0,
    "marginTop": 0,
    "paddingBottom": 0,
    "paddingLeft": 0,
    "paddingRight": 0,
    "paddingTop": 0,
    "textRendering": "optimizeLegibility",
  },
  "h5": Object {
    "color": "hsla(0,0%,0%,0.8)",
    "fontFamily": "-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen,Ubuntu,Cantarell,Fira Sans,Droid Sans,Helvetica Neue,sans-serif",
    "fontSize": "0.87055rem",
    "fontWeight": "bold",
    "lineHeight": "1.5rem",
    "marginBottom": "1.5rem",
    "marginLeft": 0,
    "marginRight": 0,
    "marginTop": 0,
    "paddingBottom": 0,
    "paddingLeft": 0,
    "paddingRight": 0,
    "paddingTop": 0,
    "textRendering": "optimizeLegibility",
  },
  "h6": Object {
    "color": "hsla(0,0%,0%,0.8)",
    "fontFamily": "-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen,Ubuntu,Cantarell,Fira Sans,Droid Sans,Helvetica Neue,sans-serif",
    "fontSize": "0.81225rem",
    "fontWeight": "bold",
    "lineHeight": "1.5rem",
    "marginBottom": "1.5rem",
    "marginLeft": 0,
    "marginRight": 0,
    "marginTop": 0,
    "paddingBottom": 0,
    "paddingLeft": 0,
    "paddingRight": 0,
    "paddingTop": 0,
    "textRendering": "optimizeLegibility",
  },
  "hgroup": Object {
    "marginBottom": "1.5rem",
    "marginLeft": 0,
    "marginRight": 0,
    "marginTop": 0,
    "paddingBottom": 0,
    "paddingLeft": 0,
    "paddingRight": 0,
    "paddingTop": 0,
  },
  "hr": Object {
    "background": "hsla(0,0%,0%,0.2)",
    "border": "none",
    "height": "1px",
    "marginBottom": "calc(1.5rem - 1px)",
    "marginLeft": 0,
    "marginRight": 0,
    "marginTop": 0,
    "paddingBottom": 0,
    "paddingLeft": 0,
    "paddingRight": 0,
    "paddingTop": 0,
  },
  "html": Object {
    "boxSizing": "border-box",
    "font": "100%/1.5em georgia,serif",
    "overflowY": "scroll",
  },
  "iframe": Object {
    "marginBottom": "1.5rem",
    "marginLeft": 0,
    "marginRight": 0,
    "marginTop": 0,
    "paddingBottom": 0,
    "paddingLeft": 0,
    "paddingRight": 0,
    "paddingTop": 0,
  },
  "img": Object {
    "marginBottom": "1.5rem",
    "marginLeft": 0,
    "marginRight": 0,
    "marginTop": 0,
    "maxWidth": "100%",
    "paddingBottom": 0,
    "paddingLeft": 0,
    "paddingRight": 0,
    "paddingTop": 0,
  },
  "kbd": Object {
    "fontSize": "0.85rem",
    "lineHeight": "1.5rem",
  },
  "li": Object {
    "marginBottom": "calc(1.5rem / 2)",
  },
  "li > ol": Object {
    "marginBottom": "calc(1.5rem / 2)",
    "marginLeft": "1.5rem",
    "marginTop": "calc(1.5rem / 2)",
  },
  "li > ul": Object {
    "marginBottom": "calc(1.5rem / 2)",
    "marginLeft": "1.5rem",
    "marginTop": "calc(1.5rem / 2)",
  },
  "noscript": Object {
    "marginBottom": "1.5rem",
    "marginLeft": 0,
    "marginRight": 0,
    "marginTop": 0,
    "paddingBottom": 0,
    "paddingLeft": 0,
    "paddingRight": 0,
    "paddingTop": 0,
  },
  "ol": Object {
    "listStyleImage": "none",
    "listStylePosition": "outside",
    "marginBottom": "1.5rem",
    "marginLeft": "1.5rem",
    "marginRight": 0,
    "marginTop": 0,
    "paddingBottom": 0,
    "paddingLeft": 0,
    "paddingRight": 0,
    "paddingTop": 0,
  },
  "ol li": Object {
    "paddingLeft": 0,
  },
  "p": Object {
    "marginBottom": "1.5rem",
    "marginLeft": 0,
    "marginRight": 0,
    "marginTop": 0,
    "paddingBottom": 0,
    "paddingLeft": 0,
    "paddingRight": 0,
    "paddingTop": 0,
  },
  "pre": Object {
    "background": "hsla(0,0%,0%,0.04)",
    "borderRadius": "3px",
    "fontSize": "0.85rem",
    "lineHeight": 1.42,
    "marginBottom": "1.5rem",
    "marginLeft": 0,
    "marginRight": 0,
    "marginTop": 0,
    "overflow": "auto",
    "padding": "1.5rem",
    "paddingBottom": 0,
    "paddingLeft": 0,
    "paddingRight": 0,
    "paddingTop": 0,
  },
  "pre code": Object {
    "background": "none",
    "lineHeight": 1.42,
  },
  "pre code:before,pre code:after,pre tt:before,pre tt:after": Object {
    "content": "\"\"",
  },
  "samp": Object {
    "fontSize": "0.85rem",
    "lineHeight": "1.5rem",
  },
  "strong": Object {
    "fontWeight": "bold",
  },
  "table": Object {
    "borderCollapse": "collapse",
    "fontSize": "1rem",
    "lineHeight": "1.5rem",
    "marginBottom": "1.5rem",
    "marginLeft": 0,
    "marginRight": 0,
    "marginTop": 0,
    "paddingBottom": 0,
    "paddingLeft": 0,
    "paddingRight": 0,
    "paddingTop": 0,
    "width": "100%",
  },
  "td,th": Object {
    "borderBottom": "1px solid hsla(0,0%,0%,0.12)",
    "fontFeatureSettings": "tnum",
    "paddingBottom": "calc(0.75rem - 1px)",
    "paddingLeft": "1rem",
    "paddingRight": "1rem",
    "paddingTop": "0.75rem",
    "textAlign": "left",
  },
  "th": Object {
    "fontWeight": "bold",
  },
  "th:first-child,td:first-child": Object {
    "paddingLeft": 0,
  },
  "th:last-child,td:last-child": Object {
    "paddingRight": 0,
  },
  "thead": Object {
    "textAlign": "left",
  },
  "tt,code": Object {
    "backgroundColor": "hsla(0,0%,0%,0.04)",
    "borderRadius": "3px",
    "fontFamily": "Consolas,\"Roboto Mono\",\"Droid Sans Mono\",\"Liberation Mono\",Menlo,Courier,monospace",
    "padding": 0,
    "paddingBottom": "0.2em",
    "paddingTop": "0.2em",
  },
  "ul": Object {
    "listStyleImage": "none",
    "listStylePosition": "outside",
    "marginBottom": "1.5rem",
    "marginLeft": "1.5rem",
    "marginRight": 0,
    "marginTop": 0,
    "paddingBottom": 0,
    "paddingLeft": 0,
    "paddingRight": 0,
    "paddingTop": 0,
  },
  "ul li": Object {
    "paddingLeft": 0,
  },
}
`;

exports[`CodePlugin() should add code styles 1`] = `
Object {
  "*": Object {
    "boxSizing": "inherit",
  },
  "*:after": Object {
    "boxSizing": "inherit",
  },
  "*:before": Object {
    "boxSizing": "inherit",
  },
  "abbr": Object {
    "borderBottom": "1px dotted hsla(0,0%,0%,0.5)",
    "cursor": "help",
  },
  "abbr[title]": Object {
    "borderBottom": "1px dotted hsla(0,0%,0%,0.5)",
    "cursor": "help",
    "textDecoration": "none",
  },
  "acronym": Object {
    "borderBottom": "1px dotted hsla(0,0%,0%,0.5)",
    "cursor": "help",
  },
  "address": Object {
    "marginBottom": "1.5rem",
    "marginLeft": 0,
    "marginRight": 0,
    "marginTop": 0,
    "paddingBottom": 0,
    "paddingLeft": 0,
    "paddingRight": 0,
    "paddingTop": 0,
  },
  "b": Object {
    "fontWeight": "bold",
  },
  "blockquote": Object {
    "marginBottom": "1.5rem",
    "marginLeft": "1.5rem",
    "marginRight": "1.5rem",
    "marginTop": 0,
    "paddingBottom": 0,
    "paddingLeft": 0,
    "paddingRight": 0,
    "paddingTop": 0,
  },
  "body": Object {
    "color": "hsla(0,0%,0%,0.8)",
    "fontWeight": "normal",
    "wordWrap": "break-word",
  },
  "code": Object {
    "fontSize": "0.85rem",
    "lineHeight": "1.5rem",
  },
  "code:before,code:after,tt:before,tt:after": Object {
    "content": "\" \"",
    "letterSpacing": "-0.2em",
  },
  "dd": Object {
    "marginBottom": "1.5rem",
    "marginLeft": 0,
    "marginRight": 0,
    "marginTop": 0,
    "paddingBottom": 0,
    "paddingLeft": 0,
    "paddingRight": 0,
    "paddingTop": 0,
  },
  "dl": Object {
    "marginBottom": "1.5rem",
    "marginLeft": 0,
    "marginRight": 0,
    "marginTop": 0,
    "paddingBottom": 0,
    "paddingLeft": 0,
    "paddingRight": 0,
    "paddingTop": 0,
  },
  "dt": Object {
    "fontWeight": "bold",
  },
  "fieldset": Object {
    "marginBottom": "1.5rem",
    "marginLeft": 0,
    "marginRight": 0,
    "marginTop": 0,
    "paddingBottom": 0,
    "paddingLeft": 0,
    "paddingRight": 0,
    "paddingTop": 0,
  },
  "figure": Object {
    "marginBottom": "1.5rem",
    "marginLeft": 0,
    "marginRight": 0,
    "marginTop": 0,
    "paddingBottom": 0,
    "paddingLeft": 0,
    "paddingRight": 0,
    "paddingTop": 0,
  },
  "form": Object {
    "marginBottom": "1.5rem",
    "marginLeft": 0,
    "marginRight": 0,
    "marginTop": 0,
    "paddingBottom": 0,
    "paddingLeft": 0,
    "paddingRight": 0,
    "paddingTop": 0,
  },
  "h1": Object {
    "color": "hsla(0,0%,0%,0.8)",
    "fontFamily": "-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen,Ubuntu,Cantarell,Fira Sans,Droid Sans,Helvetica Neue,sans-serif",
    "fontSize": "2rem",
    "fontWeight": "bold",
    "lineHeight": "2.25rem",
    "marginBottom": "1.5rem",
    "marginLeft": 0,
    "marginRight": 0,
    "marginTop": 0,
    "paddingBottom": 0,
    "paddingLeft": 0,
    "paddingRight": 0,
    "paddingTop": 0,
    "textRendering": "optimizeLegibility",
  },
  "h2": Object {
    "color": "hsla(0,0%,0%,0.8)",
    "fontFamily": "-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen,Ubuntu,Cantarell,Fira Sans,Droid Sans,Helvetica Neue,sans-serif",
    "fontSize": "1.51572rem",
    "fontWeight": "bold",
    "lineHeight": "2.25rem",
    "marginBottom": "1.5rem",
    "marginLeft": 0,
    "marginRight": 0,
    "marginTop": 0,
    "paddingBottom": 0,
    "paddingLeft": 0,
    "paddingRight": 0,
    "paddingTop": 0,
    "textRendering": "optimizeLegibility",
  },
  "h3": Object {
    "color": "hsla(0,0%,0%,0.8)",
    "fontFamily": "-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen,Ubuntu,Cantarell,Fira Sans,Droid Sans,Helvetica Neue,sans-serif",
    "fontSize": "1.31951rem",
    "fontWeight": "bold",
    "lineHeight": "2.25rem",
    "marginBottom": "1.5rem",
    "marginLeft": 0,
    "marginRight": 0,
    "marginTop": 0,
    "paddingBottom": 0,
    "paddingLeft": 0,
    "paddingRight": 0,
    "paddingTop": 0,
    "textRendering": "optimizeLegibility",
  },
  "h4": Object {
    "color": "hsla(0,0%,0%,0.8)",
    "fontFamily": "-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen,Ubuntu,Cantarell,Fira Sans,Droid Sans,Helvetica Neue,sans-serif",
    "fontSize": "1rem",
    "fontWeight": "bold",
    "lineHeight": "1.5rem",
    "marginBottom": "1.5rem",
    "marginLeft": 0,
    "marginRight": 0,
    "marginTop": 0,
    "paddingBottom": 0,
    "paddingLeft": 0,
    "paddingRight": 0,
    "paddingTop": 0,
    "textRendering": "optimizeLegibility",
  },
  "h5": Object {
    "color": "hsla(0,0%,0%,0.8)",
    "fontFamily": "-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen,Ubuntu,Cantarell,Fira Sans,Droid Sans,Helvetica Neue,sans-serif",
    "fontSize": "0.87055rem",
    "fontWeight": "bold",
    "lineHeight": "1.5rem",
    "marginBottom": "1.5rem",
    "marginLeft": 0,
    "marginRight": 0,
    "marginTop": 0,
    "paddingBottom": 0,
    "paddingLeft": 0,
    "paddingRight": 0,
    "paddingTop": 0,
    "textRendering": "optimizeLegibility",
  },
  "h6": Object {
    "color": "hsla(0,0%,0%,0.8)",
    "fontFamily": "-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen,Ubuntu,Cantarell,Fira Sans,Droid Sans,Helvetica Neue,sans-serif",
    "fontSize": "0.81225rem",
    "fontWeight": "bold",
    "lineHeight": "1.5rem",
    "marginBottom": "1.5rem",
    "marginLeft": 0,
    "marginRight": 0,
    "marginTop": 0,
    "paddingBottom": 0,
    "paddingLeft": 0,
    "paddingRight": 0,
    "paddingTop": 0,
    "textRendering": "optimizeLegibility",
  },
  "hgroup": Object {
    "marginBottom": "1.5rem",
    "marginLeft": 0,
    "marginRight": 0,
    "marginTop": 0,
    "paddingBottom": 0,
    "paddingLeft": 0,
    "paddingRight": 0,
    "paddingTop": 0,
  },
  "hr": Object {
    "background": "hsla(0,0%,0%,0.2)",
    "border": "none",
    "height": "1px",
    "marginBottom": "calc(1.5rem - 1px)",
    "marginLeft": 0,
    "marginRight": 0,
    "marginTop": 0,
    "paddingBottom": 0,
    "paddingLeft": 0,
    "paddingRight": 0,
    "paddingTop": 0,
  },
  "html": Object {
    "boxSizing": "border-box",
    "font": "100%/1.5em georgia,serif",
    "overflowY": "scroll",
  },
  "iframe": Object {
    "marginBottom": "1.5rem",
    "marginLeft": 0,
    "marginRight": 0,
    "marginTop": 0,
    "paddingBottom": 0,
    "paddingLeft": 0,
    "paddingRight": 0,
    "paddingTop": 0,
  },
  "img": Object {
    "marginBottom": "1.5rem",
    "marginLeft": 0,
    "marginRight": 0,
    "marginTop": 0,
    "maxWidth": "100%",
    "paddingBottom": 0,
    "paddingLeft": 0,
    "paddingRight": 0,
    "paddingTop": 0,
  },
  "kbd": Object {
    "fontSize": "0.85rem",
    "lineHeight": "1.5rem",
  },
  "li": Object {
    "marginBottom": "calc(1.5rem / 2)",
  },
  "li > ol": Object {
    "marginBottom": "calc(1.5rem / 2)",
    "marginLeft": "1.5rem",
    "marginTop": "calc(1.5rem / 2)",
  },
  "li > ul": Object {
    "marginBottom": "calc(1.5rem / 2)",
    "marginLeft": "1.5rem",
    "marginTop": "calc(1.5rem / 2)",
  },
  "noscript": Object {
    "marginBottom": "1.5rem",
    "marginLeft": 0,
    "marginRight": 0,
    "marginTop": 0,
    "paddingBottom": 0,
    "paddingLeft": 0,
    "paddingRight": 0,
    "paddingTop": 0,
  },
  "ol": Object {
    "listStyleImage": "none",
    "listStylePosition": "outside",
    "marginBottom": "1.5rem",
    "marginLeft": "1.5rem",
    "marginRight": 0,
    "marginTop": 0,
    "paddingBottom": 0,
    "paddingLeft": 0,
    "paddingRight": 0,
    "paddingTop": 0,
  },
  "ol li": Object {
    "paddingLeft": 0,
  },
  "p": Object {
    "marginBottom": "1.5rem",
    "marginLeft": 0,
    "marginRight": 0,
    "marginTop": 0,
    "paddingBottom": 0,
    "paddingLeft": 0,
    "paddingRight": 0,
    "paddingTop": 0,
  },
  "pre": Object {
    "background": "hsla(0,0%,0%,0.04)",
    "borderRadius": "3px",
    "fontSize": "0.85rem",
    "lineHeight": 1.42,
    "marginBottom": "1.5rem",
    "marginLeft": 0,
    "marginRight": 0,
    "marginTop": 0,
    "overflow": "auto",
    "padding": "1.5rem",
    "paddingBottom": 0,
    "paddingLeft": 0,
    "paddingRight": 0,
    "paddingTop": 0,
  },
  "pre code": Object {
    "background": "none",
    "lineHeight": 1.42,
  },
  "pre code:before,pre code:after,pre tt:before,pre tt:after": Object {
    "content": "\"\"",
  },
  "samp": Object {
    "fontSize": "0.85rem",
    "lineHeight": "1.5rem",
  },
  "strong": Object {
    "fontWeight": "bold",
  },
  "table": Object {
    "borderCollapse": "collapse",
    "fontSize": "1rem",
    "lineHeight": "1.5rem",
    "marginBottom": "1.5rem",
    "marginLeft": 0,
    "marginRight": 0,
    "marginTop": 0,
    "paddingBottom": 0,
    "paddingLeft": 0,
    "paddingRight": 0,
    "paddingTop": 0,
    "width": "100%",
  },
  "td,th": Object {
    "borderBottom": "1px solid hsla(0,0%,0%,0.12)",
    "fontFeatureSettings": "tnum",
    "paddingBottom": "calc(0.75rem - 1px)",
    "paddingLeft": "1rem",
    "paddingRight": "1rem",
    "paddingTop": "0.75rem",
    "textAlign": "left",
  },
  "th": Object {
    "fontWeight": "bold",
  },
  "th:first-child,td:first-child": Object {
    "paddingLeft": 0,
  },
  "th:last-child,td:last-child": Object {
    "paddingRight": 0,
  },
  "thead": Object {
    "textAlign": "left",
  },
  "tt,code": Object {
    "backgroundColor": "hsla(0,0%,0%,0.04)",
    "borderRadius": "3px",
    "fontFamily": "Consolas,\"Roboto Mono\",\"Droid Sans Mono\",\"Liberation Mono\",Menlo,Courier,monospace",
    "padding": 0,
    "paddingBottom": "0.2em",
    "paddingTop": "0.2em",
  },
  "ul": Object {
    "listStyleImage": "none",
    "listStylePosition": "outside",
    "marginBottom": "1.5rem",
    "marginLeft": "1.5rem",
    "marginRight": 0,
    "marginTop": 0,
    "paddingBottom": 0,
    "paddingLeft": 0,
    "paddingRight": 0,
    "paddingTop": 0,
  },
  "ul li": Object {
    "paddingLeft": 0,
  },
}
`;
